--- a/public/locales/ko/Note.json
+++ b/public/locales/ko/Note.json
@@ -22,69 +22,69 @@
       "3. 칸 변경 및 재계산",
       "각 칸을 클릭하면 칸의 열림/닫힘 상태를 전환할 수 있습니다.",
       "물건 정보 하단의 '추가' 버튼을 누르면 발견한 비품의 위치를 설정할 수 있습니다. 이동 및 회전으로 게임 내에서 발견한 물건의 위치와 같이 설정해주세요. 실수로 추가 버튼을 눌렀을 경우, 쓰레기통 아이콘을 클릭해 삭제할 수 있습니다.",
-      "칸 상태를 전부 반영했으면, 다시 '실행' 버튼을 눌러 확률을 재계산할 수도 있습니다. <b>자동으로 재계산되지 않으니</b> 주의하세요. 단 한칸만 열려도 확률이 변하기 때문에, <b>매번 실행 버튼을 누르는 것을 강력히 권장합니다</b>.",
-      "盤面の更新が終わったら、再度「実行」ボタンを押すことで確率が再計算されます。<b>自動では再計算されません</b>のでご注意ください。1マスでも開けると確率が変化するため、<b>毎回実行ボタンを押すことを強く推奨</b>します。"
+      "칸 상태를 전부 반영했으면, 다시 '실행' 버튼을 눌러 확률을 재계산할 수도 있습니다. <b>자동으로 재계산되지 않으니</b> 주의하세요. 단 한칸만 열려도 확률이 변하기 때문에, <b>매번 실행 버튼을 누르는 것을 강력히 권장합니다</b>."
     ]
   },
   "faq": {
-    "header": "よくある質問",
+    "header": "질문과 답변",
     "1": [
-      "「備品が重なっています」というエラーが出た！",
-      "ゲーム内で備品が重なって出てくることはないため、そのような配置には制限をかけています。エラーメッセージ中にどの位置で備品が重なっているかが表示されているので、それに従って入力を修正してください。"
+      "'물건이 겹쳐 있습니다'라는 오류가 발생했어요!",
+      "게임 내에서는 물건이 겹치지 않아야 하므로 제한되고 있습니다. 오류 메시지에 물건이 겹쳐 있는 위치가 표시되므로 이를 참고해 위치를 수정해주세요."
     ],
     "2": [
-      "「条件を満たす配置が存在しません」というエラーが出た！",
-      "どのように配置しても矛盾が生じてしまい、条件を満たす配置が一つも存在しない状態です。入力が間違っていないかご確認ください。"
+      "'조건을 만족하는 배치가 존재하지 않습니다'라는 오류가 발생했어요!",
+      "어떤 방식으로 배치를 해도 모순이 생겨 조건을 만족하는 배치가 하나도 없는 상태입니다. 입력이 올바른지 확인해주세요."
     ],
     "3": [
-      "よく分からない内容のエラーが出た！",
-      "バグかもしれません。",
-      "開発者",
-      "にお問い合わせください。"
+      "알 수 없는 오류 내용이 발생했어요!",
+      "버그일 가능성이 있습니다.",
+      "개발자",
+      "에게 문의해주세요."
     ],
     "4": [
-      "盤面をリセットしたい！",
-      "備品プリセットを読み込み直すか、ページをリロードすると盤面がリセットされます。逆に、リロードすると作業中の内容が消えてしまうのでご注意ください。"
+      "배치를 초기화하고 싶어요!",
+      "물건 프리셋을 다시 불러오거나 페이지를 새로고침하면 배치가 초기화됩니다. 반대로 새로고침시 작업 중인 내용이 사라질 수 있으니 주의해주세요."
     ],
     "5": [
-      "実行ボタンを押しても確率が表示されない！",
-      "お使いの端末やブラウザによっては、確率計算に時間がかかる可能性があるほか、ブラウザによっては機能に対応していない可能性があります（動作確認はGoogle Chromeにて実行しております）。また、確率表示ボタンが全てOFFになっていないかもご確認ください。"
+      "실행 버튼을 눌렀는데 확률이 표시되지 않아요!",
+      "사용 중인 단말기나 브라우저에 따라 확률 계산 시간이 오래 걸릴 수 있으며, 브라우저에 따라 기능이 지원되지 않을 가능성도 있습니다(작동 확인은 Google Chrome에서 실행되었습니다). 또한, 확률 표시 버튼이 모두 OFF 상태가 아닌지 확인해주세요."
     ],
     "6": [
-      "実行ボタンを押すたびに確率が変わるんだけど？",
-      "あり得る全パターンの配置を計算すると時間がかかりすぎるため、一部の配置をランダムにサンプリングすることで計算時間を削減しています。そのため、実行のたびに表示される確率が変化します。",
-      "なお、あり得る全パターンが100,000通り以下の場合は全パターンを計算した厳密な確率が表示されます。<s>かんぺき～</s>"
+      "실행 버튼을 누를 때마다 확률이 바뀌는데요?",
+      "가능한 모든 배치 패턴을 계산하면 시간이 너무 오래 걸리기 때문에, 일부 배치를 랜덤으로 샘플링하여 계산 시간을 줄이고 있습니다. 이 때문에 실행할 때마다 표시되는 확률이 달라집니다.",
+      "또한, 가능한 모든 배치 패턴이 100,000개 이하일 경우에는 모든 패턴을 계산하여 정확한 확률이 표시됩니다. <s>칸페키~</s>"
     ],
     "7": [
-      "表示された確率は絶対に正しいの？",
-      "正しくない可能性もあります。上記のように配置をランダムにサンプリングしているほか、確率計算を行う上での前提が異なっている可能性もあります。以下の仮定の下で計算を行っているので、妥当性判定の参考にしてください。",
-      "備品の配置は、全ての起こりうる配置から一様ランダムに抽選される（ゲーム内で使用されている初期盤面の生成アルゴリズムによっては、",
-      "全ての配置の確率が均等ではなくなる",
-      "可能性があります。）",
-      "備品の配置がパターン化されておらず、抽選されない配置が存在しない",
-      "備品の配置はマスのオープン前に全て確定しており、後から変更されない",
-      "バグってたらごめんなさい……。"
+      "표시된 확률이 완전 정확한가요?",
+      "틀릴 가능성도 있습니다. 위에서 설명한 것처럼 배치를 랜덤으로 샘플링하는 데다가, 확률 계산을 수행하는 전제가 다를 수도 있습니다. 아래의 가정을 바탕으로 계산을 수행하니, 적합성 판단의 참고로 사용하세요.",
+      "물건의 배치는 모든 가능한 배치에서 균등하게 랜덤으로 추출됩니다(게임 내에서 사용되는 초기 배치 생성 알고리즘에 따라, 모든 배치의 확률이 균등하지 않을 가능성이 있습니다).",
+      "물건 배치가 패턴화되지 않았으며, 추출되지 않는 배치가 존재하지 않습니다.",
+      "물건 배치는 칸이 열리기 전에 모두 확정되며 이후 변경되지 않습니다.",
+      "버그라면 죄송합니다."
     ],
     "8": [
-      "確率が最大のマスを開けていけば電卓消費量の期待値が最小になるの？",
-      "比較的筋の良い戦略とは思われますが、最適な行動という保証はありません。",
-      "なお、似た題材の問題として、競技プログラミングサイト",
-      "上で行われた",
-      "がありますので、ご興味のある方は挑戦してみてください。",
-      "ちなみに私はその優勝者です。"
+      "확률이 가장 높은 칸을 열면 계산기 소비량의 기대값이 최소화되나요?",
+      "비교적 합리적인 전략으로 보이지만, 최적의 행동이라는 보장은 없습니다.",
+      "참고로, 비슷한 주제의 문제가 경쟁 프로그래밍 사이트",
+      "에서 진행된",
+      "적이 있으니, 관심 있는 분은 도전해보세요.",
+      "참고로 저는 그 우승자입니다."
     ],
-    "9": ["ブルアカの推し生徒さんは？", "伊落マリーさんです。"]
+    "9": [
+      "블루 아카이브에서 좋아하는 학생은 누구인가요?",
+      "이오치 마리입니다. 평화와 안녕이 그대와 함께 하기를."
+    ]
   },
   "about_developer": [
-    "開発者について",
-    "このページは",
-    "が作成しました。",
-    "GitHubリポジトリは",
-    "こちら",
-    "です。計算が間違っていそう・こういった機能が欲しいなど、バグ報告やリクエストはそちらにお願いします。"
+    "개발자 정보",
+    "이 페이지는",
+    "가 만들었습니다.",
+    "Github 레포는",
+    "여기",
+    "입니다. 계산이 틀린 것 같거나, 필요한 기능에 대한 요청 또는 버그 보고는 해당 리포지토리로 부탁드립니다."
   ],
   "special_thanks": [
-    "このプロダクトは以下の皆様のコントリビューションによって成り立っています。ありがとうございます！",
-    "アイテム数量をご報告くださった皆様"
+    "이 사이트는 다음 분들의 기여로 만들어졌습니다. 감사합니다!",
+    "아이템 규격 및 수량을 보고해 주신 모든 분들"
   ]
 }
